# fextract

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/fextract/: cli.py
